tests/fail/literal_no_implicit_bool/test.yp
fn main() {
    bool x = 1;
}
